Bug 1494430 - Handle torn-down Render thread when getting memory reports. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D6994

--HG--
extra : moz-landing-system : lando